--- a/index.css
+++ b/index.css
@@ -342,7 +342,7 @@ body{
     padding: 0 !important;
     padding-bottom: 0px !important;
     border-radius: 30px 30px 0 0;
-    border: 1px solid rgba(0, 0, 0, 0.05);
+    /* border: 1px solid rgba(0, 0, 0, 0.05); */
     z-index: 9999;
   }
   
